<resources>
    <string name="app_name">Spoiledit</string>
    <string name="app_display_name">Spoiled It</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="splash_intro_p1">Before You Go And Spill Your Popcorn!</string>
    <string name="splash_intro_p2">You Should Know This Is An App Full Of Movie Spoilers</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="hint_name">* Name</string>
    <string name="hint_phone_number">* Phone Number</string>
    <string name="mandatory_mark">*</string>
    <string name="content_description">Content Description</string>
    <string name="hint_confirm_password">* Confirm Password</string>
    <string name="hint_password">* Password</string>
    <string name="hint_email">* Email</string>
    <string name="tandc_prompt">By continuing, you agree to our</string>
    <string name="terms_and_policy"><![CDATA[Terms & Policy]]></string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup_prompt">Please fill up the required details below</string>
    <string name="submit">Submit</string>
	<string name="otp_prompt">A 6 digit confirmation code has been sent to XXXXXXXXXXX via SMS</string>
    <string name="otp_prompt2">please enter it below</string>
	<string name="create_new_password">Create New Password</string>
    <string name="resend">Resend</string>
    <string name="confirmation_code">confirmation code</string>
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="new_spoilers">New Spoilers</string>
    <string name="settings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="recent_movies">Recent Movies</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="view_details">View Details</string>
    <string name="create_password_prompt">Please provide your mail to update password</string>
    <string name="hint_old_password">* Old Password</string>
    <string name="hint_new_password">* New Password</string>
    <string name="change_password_prompt">Enter new password and continue</string>
    <string name="new_user">New user?</string>
    <string name="signup">Sign Up</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="add_spoiler_prompt">How was your overall view about the movie?</string>
    <string name="select_type">Select Type</string>
    <string name="was_there_mid_credit">Was there a Mid-Credit scene?</string>
    <string name="was_there_post_credit">Was there a Stinger? (Post-Credit)</string>
    <string name="yes">Yes</string>
    <string name="full_spoiler">Full Spoiler</string>
    <string name="just_ending">Just Ending</string>
    <string name="brief_summary">Brief Summary</string>
    <string name="no">No</string>
    <string name="not_sure">Not Sure</string>
    <string name="your_message">Your message (optional)</string>
    <string name="write_the_spoiler_here">Write the spoiler here</string>
	<string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="smiles">Smiles!</string>
    <string name="sorry">Sorry!</string>
    <string name="oops">Oops!</string>
    <string name="hey">Hey!</string>
    <string name="hey_you_sure">Hey! You sure?</string>
    <string name="yes_im">Yes, I\'m</string>
    <string name="no_cancel">No, Cancel</string>
    <string name="logout">Logout</string>
    <string name="update_available">Yey! New Features.</string>
    <string name="update">Update</string>
    <string name="update_info">We\'ve upgraded ourselves. Update to enjoy latest features.</string>
    <string name="add_new_spoiler">Add New Spoilers</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_account">My Account</string>
    <string name="my_spoilers">My Spoilers</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="read_later">Read Later</string>
    <string name="spoilers">Spoilers</string>
    <string name="category">Category</string>
    <string name="char_hyphen">-</string>
    <string name="mid_credit_scene">Mid Credit Scene</string>
    <string name="post_credit_scene">Post Credit Scene</string>
    <string name="go_to_spoiler">Go To Spoiler</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_watchlist">Add To Watchlist</string>
    <string name="view_spoilers">View Spoilers</string>
    <string name="see_spoiler_now">See Spoiler Now</string>
    <string name="director">Director:</string>
    <string name="stars">Stars:</string>
    <string name="details">Details</string>
    <string name="comment">Comment</string>
    <string name="type_your_message">Write your comment</string>
    <string name="reply">Reply</string>
    <string name="cookies_policy">Cookies Policy</string>
    <string name="by_colon">By:</string>
    <string name="add_report">Add Report</string>
    <string name="inappropriate_or_spam">Inappropriate or Spam</string>
    <string name="spoiler_is_wrong">Spoiler is wrong</string>
    <string name="other_add">Other(Add Explanation)</string>
</resources>
