<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <include layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_y_inner_parent"
            android:paddingStart="@dimen/padding_x_inner_parent"
            android:paddingEnd="@dimen/padding_x_inner_parent"
            android:paddingBottom="@dimen/padding_y_inner_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/change_password_prompt"
                android:fontFamily="@font/montserrat_bold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textStyle="bold"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:paddingStart="@dimen/padding_x_input"
                android:paddingEnd="@dimen/padding_x_input"
                android:orientation="horizontal"
                android:background="@drawable/background_signup_input">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_new_password"
                    android:textSize="@dimen/text_14"
                    android:id="@+id/et_new_password"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:contentDescription="@string/content_description" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:paddingStart="@dimen/padding_x_input"
                android:paddingEnd="@dimen/padding_x_input"
                android:orientation="horizontal"
                android:background="@drawable/background_signup_input">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_confirm_password"
                    android:textSize="@dimen/text_14"
                    android:id="@+id/et_confirm_password"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:contentDescription="@string/content_description" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_marginTop="@dimen/margin_top_between_children"
                app:cornerRadius="24dp"
                android:text="@string/submit"
                android:fontFamily="@font/montserrat_bold"
                android:textAllCaps="false"
                android:textSize="@dimen/text_16"
                android:id="@+id/btn_submit"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/layout_loading" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>