<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite" >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <include layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_y_inner_parent"
            android:paddingStart="@dimen/padding_x_inner_parent"
            android:paddingEnd="@dimen/padding_x_inner_parent"
            android:paddingBottom="@dimen/padding_y_inner_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:fontFamily="@font/montserrat_medium"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/colorBlack"
                android:id="@+id/tv_header"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_32"
                android:id="@+id/tv_terms_conditions"
                android:scrollbars="vertical"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginEnd="@dimen/spacing_16"
            android:layout_gravity="bottom"
            app:cornerRadius="24dp"
            android:text="@string/accept_terms"
            android:fontFamily="@font/montserrat_bold"
            android:textAllCaps="false"
            android:textSize="@dimen/text_16"
            android:id="@+id/btn_accept_terms"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_8"
            android:layout_marginBottom="@dimen/spacing_16"
            android:text="@string/read_later"
            android:id="@+id/tv_read_later"/>

    </LinearLayout>
    <include layout="@layout/layout_loading" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>